# qstorm

./: .gitignore  Cargo.toml  README.md  zensical.toml
.github/workflows/: docs.yml
docs/: index.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/providers/: elasticsearch.md  index.md  qdrant.md
docs/usage/: cli.md  queries.md  tui.md
example_configs/: qstorm.elastic.example.yaml  qstorm.pgvector.example.yaml  qstorm.qdrant.example.yaml  queries.example.yaml
qstorm-cli/: Cargo.toml
qstorm-cli/src/: app.rs  main.rs  tui.rs  ui.rs
qstorm-core/: Cargo.toml
qstorm-core/src/: config.rs  embedder.rs  error.rs  lib.rs  metrics.rs  provider.rs  queries.rs  runner.rs  types.rs
qstorm-core/src/providers/: elastic.rs  mod.rs  pgvector.rs  qdrant.rs
