[workspace]
resolver = "2"
members = ["qstorm-core", "qstorm-cli"]

[workspace.package]
version = "0.0.1"
edition = "2024"
license = "MIT"
authors = ["Nathan Leroy"]

[workspace.dependencies]

tokio = { version = "1", features = ["full"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

thiserror = "2"
anyhow = "1"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

chrono = { version = "0.4", features = ["serde"] }
hdrhistogram = "7"

reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

fastembed = "4"
async-openai = "0.27"
indicatif = "0.17"

clap = { version = "4", features = ["derive"] }
ratatui = "0.29"
crossterm = "0.28"

arrow = "54"
parquet = "54"


qstorm-core = { path = "qstorm-core" }