[package]
name = "qstorm-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "CLI for qstorm search engine benchmarking"

[[bin]]
name = "qstorm"
path = "src/main.rs"

[features]
default = ["elasticsearch", "qdrant"]
elasticsearch = ["qstorm-core/elasticsearch"]
qdrant = ["qstorm-core/qdrant"]
embeddings = ["qstorm-core/embeddings"]
openai-embeddings = ["qstorm-core/openai-embeddings"]

[dependencies]
qstorm-core.workspace = true
tokio.workspace = true
clap.workspace = true
ratatui.workspace = true
crossterm.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true