[package]
name = "qstorm-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Core library for benchmarking search engines"

[features]
default = []
elasticsearch = ["dep:elasticsearch"]
qdrant = ["dep:qdrant-client"]
embeddings = ["dep:fastembed"]
openai-embeddings = ["dep:async-openai", "dep:indicatif"]
pgvector = ["dep:sqlx", "dep:pgvector"]
all-providers = ["elasticsearch", "qdrant", "pgvector"]

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
chrono.workspace = true
hdrhistogram.workspace = true
async-trait = "0.1"

# provider sdks (optional)
elasticsearch = { version = "9.1.0-alpha.1", optional = true }
qdrant-client = { version = "1.16.0", optional = true }

# pgvector (optional)
sqlx = { workspace = true, optional = true }
pgvector = { workspace = true, optional = true }

# embeddings (optional)
fastembed = { workspace = true, optional = true }
async-openai = { workspace = true, optional = true }
indicatif = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }